增加对于用户配置错误的处理，修改demo函数

--- a/dev/vagrant/config/mis.yaml
+++ b/dev/vagrant/config/mis.yaml
@@ -85,3 +85,21 @@ createUser:
 #         url: "https://hahahaha3.1.com"
 #         # openInNewPage: true
 #         iconPath: ""
+
+# # 新增自定义收费规则
+# customAmountStrategies:
+#   # 计费方式id，请勿重复，重复的话后面的计费方式将会覆盖前面的，
+#   # 定义后不能更改，自定义计费项会记录所使用的计费方式id，并存储到数据库里，
+#   # 其作用与"max-cpusAlloc-mem", "max-gpu-cpusAlloc", "gpu", "cpusAlloc"等同，
+#   # 若当前生效的自定义计费项使用了某自定义计费方式id，你不能删除它，否则系统将无法启动，如要删除，请先使该计费项失效
+#   - id: "strategy1"
+#       # 可选，新的计量方式的显示名称，如不填写将使用id的内容
+#     name: "自定义收费计算方式1"
+#       # 可选，计量方式描述
+#     comment: "自定义收费计算方式1，运行时间低于3分钟以下的作业不计费，高于3分钟的8元"
+#       # 脚本文件路径，不包含config/scripts前缀，如my-strategy.js即等于config/scripts/my-strategy.js
+#       # 支持commonjs或者esm，内容不支持动态修改，修改后需重启系统
+#       # 自定义计量方式的文件应该默认导出一个如下签名的函数:
+#       # type CustomAmountStrategyFunction = (jobInfo: JobInfo) => number | Promise<number>;
+#       # JobInfo为apps/mis-server/src/bl/PriceMap.ts中的JobInfo类型，提供这个作业的用量信息
+#     script: "my-strategy.js"
