--- a/dev/vagrant/config/mis.yaml
+++ b/dev/vagrant/config/mis.yaml
@@ -96,10 +96,10 @@ createUser:
 #       # 可选，新的计量方式的显示名称，如不填写将使用id的内容
 #     name: "自定义收费计算方式1"
 #       # 可选，计量方式描述
-#     comment: "自定义收费计算方式1，运行时间低于3分钟以下的作业不计费，高于3分钟的8元"
+#     comment: "自定义收费计算方式1，运行时间低于3分钟以下的作业不计费，大于或等于3分钟的按照gpu或cpu用量计算"
 #       # 脚本文件路径，不包含config/scripts前缀，如my-strategy.js即等于config/scripts/my-strategy.js
 #       # 支持commonjs或者esm，内容不支持动态修改，修改后需重启系统
 #       # 自定义计量方式的文件应该默认导出一个如下签名的函数:
 #       # type CustomAmountStrategyFunction = (jobInfo: JobInfo) => number | Promise<number>;
-#       # JobInfo为apps/mis-server/src/bl/PriceMap.ts中的JobInfo类型，提供这个作业的用量信息
+#       # JobInfo为apps/mis-server/src/bl/PriceMap.ts中的JobInfo类型，提供作业的用量信息
 #     script: "my-strategy.js"
