--- a/dev/vagrant/config/auth.yml
+++ b/dev/vagrant/config/auth.yml
@@ -148,7 +148,7 @@ ldap:
 # auth 界面 ui 配置
 ui:
   # 登录界面背景图
-  backgroundImagePath: "/__public__/assets/background.png"
+  backgroundImagePath: "./assets/background.png"
   # 登录界面背景色，当背景图无法加载时，背景色起效
   backgroundFallbackColor: "#9a0000"
   # 登录界面 logo 图, light: 亮色模式下的 logo, dark: 黑暗模式下的 logo
