--- a/apps/portal-web/config/portal.yaml
+++ b/apps/portal-web/config/portal.yaml
@@ -39,12 +39,7 @@ homeText:
     a.com: "a.com's SCOW"
 
 # 提交作业命令框中的提示语
-submitPromptText:
-  # 默认文本
-  defaultText: "#此处参数设置的优先级高于页面其它地方，两者冲突时以此处为准"
-  # 从不同域名访问，显示的不同的提示词
-  hostnameMap:
-    a.com: "a.com's 提交作业命令框中的提示语"
+# submitPromptText: "#此处参数设置的优先级高于页面其它地方，两者冲突时以此处为准"
 
 # 如果部署了管理系统，请设置管理系统部署的路径
 # misPath: /mis
