变量名修改

--- a/dev/vagrant/config/portal.yaml
+++ b/dev/vagrant/config/portal.yaml
@@ -40,7 +40,7 @@ homeText:
   #   a.com: "a.com's SCOW"
 
 # 提交作业命令框中的提示语
-# submitPromptText: "#此处参数设置的优先级高于页面其它地方，两者冲突时以此处为准"
+# submitJobPromptText: "#此处参数设置的优先级高于页面其它地方，两者冲突时以此处为准"
 
 # 是否启用终端功能
 shell: true
