--- a/apps/portal-server/config/portal.yaml
+++ b/apps/portal-server/config/portal.yaml
@@ -39,7 +39,7 @@ homeText:
     a.com: "a.com's SCOW"
 
 # 提交作业命令框中的提示语
-# submitPromptText: "#此处参数设置的优先级高于页面其它地方，两者冲突时以此处为准"
+# submitJobPromptText: "#此处参数设置的优先级高于页面其它地方，两者冲突时以此处为准"
 
 # 如果部署了管理系统，请设置管理系统部署的路径
 # misPath: /mis
