--- a/libs/operation-log/package.json
+++ b/libs/operation-log/package.json
@@ -16,10 +16,9 @@
   "license": "Mulan PSL v2",
   "repository": "https://github.com/PKUHPC/SCOW",
   "dependencies": {
-    "@ddadaal/tsgrpc-client": "0.17.5",
-    "@grpc/grpc-js": "1.8.18",
-    "@scow/protos": "workspace:*",
-    "bignumber.js": "9.1.1"
+    "@ddadaal/tsgrpc-client": "0.17.6",
+    "@grpc/grpc-js": "1.8.21",
+    "@scow/protos": "workspace:*"
   },
   "devDependencies": {
     "@scow/config": "workspace:*",
