--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -42,6 +42,7 @@
     "@scow/lib-web": "workspace:*",
     "@scow/protos": "workspace:*",
     "@scow/utils": "workspace:*",
+    "@scow/lib-operation-log": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
     "@sinclair/typebox": "0.30.4",
     "@ant-design/cssinjs": "1.16.1",
