refactor: 修改服务名为audit-server

--- a/deploy/vagrant/scow/scow-deployment/install.yaml
+++ b/deploy/vagrant/scow/scow-deployment/install.yaml
@@ -13,6 +13,6 @@ log:
     logDir: /var/log/fluentd
 auth:
   portMappings: {}
-operationLog:
+audit:
   dbPassword: must!chang3this
   portMappings: {}
