fix deploy build, change locale into initialProps

--- a/apps/mis-web/package.json
+++ b/apps/mis-web/package.json
@@ -15,6 +15,7 @@
     "public",
     "assets",
     "next.config.js",
+    "next-i18next.config.js",
     "config.js",
     "api-routes-schemas.json",
     "!**/*.map"
