--- a/dev/vagrant/config/common.yml
+++ b/dev/vagrant/config/common.yml
@@ -4,7 +4,13 @@ passwordPattern:
   regex: ^(?=.*\d)(?=.*[a-zA-Z])(?=.*[`~!@#\$%^&*()_+\-[\];',./{}|:"<>?]).{8,}$
 
   # 出错时的消息。下面为默认值
-  errorMessage: 必须包含字母、数字和符号，长度大于等于8位
+  # errorMessage: 必须包含字母、数字和符号，长度大于等于8位
+  errorMessage:
+    i18n:
+      default: 必须包含字母、数字和符号，长度大于等于8位,
+      en: PASSWORD PATTERN TEST,
+      zh_cn: 必须包含字母、数字和符号，长度大于等于8位
+
 
 # # 在导航栏右侧用户下拉菜单中增加链接相关配置
 # userLinks:
