--- a/package.json
+++ b/package.json
@@ -61,8 +61,6 @@
   "volta": {
     "node": "18.17.1"
   },
-  "packageManager": "pnpm@8.6.12",
-  "dependencies": {
-    "react-typed-i18n": "^2.3.0"
-  }
+  "packageManager": "pnpm@8.6.12"
+
 }
