--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -28,6 +28,7 @@
     "liquidjs": "10.8.4",
     "@scow/config": "workspace:*",
     "@scow/lib-config": "workspace:*",
+    "@scow/lib-server": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.31.1",
@@ -44,8 +45,7 @@
     "nodemailer": "6.9.4",
     "qrcode": "1.5.3",
     "speakeasy": "2.0.0",
-    "react-typed-i18n": "^2.3.0",
-    "nookies": "2.5.2"
+    "react-typed-i18n": "^2.3.0"
   },
   "devDependencies": {
     "@types/asn1": "0.2.1",
