--- a/libs/server/package.json
+++ b/libs/server/package.json
@@ -18,7 +18,8 @@
   "repository": "https://github.com/PKUHPC/SCOW",
   "dependencies": {
     "@ddadaal/tsgrpc-common": "0.2.4",
-    "@grpc/grpc-js": "1.8.21"
+    "@grpc/grpc-js": "1.8.21",
+    "nookies": "2.5.2"
   },
   "devDependencies": {
     "@ddadaal/tsgrpc-server": "0.19.4",
