--- a/docker/Dockerfile.scow
+++ b/docker/Dockerfile.scow
@@ -22,6 +22,8 @@ RUN corepack enable
 WORKDIR /app
 COPY pnpm-lock.yaml .
 
+COPY patches ./patches
+
 RUN pnpm fetch
 
 COPY . .
@@ -39,7 +41,7 @@ WORKDIR /app/dist
 RUN pnpm i --offline --prod --frozen-lockfile
 
 # delete next.js build caches to reduce 200MB+ image size
-RUN rm -rf apps/mis-web/.next/cache apps/portal-web/.next/cache 
+RUN rm -rf apps/mis-web/.next/cache apps/portal-web/.next/cache
 
 FROM base AS runner
 
