--- a/dev/vagrant/config/clusters/hpc01.yaml
+++ b/dev/vagrant/config/clusters/hpc01.yaml
@@ -1,5 +1,11 @@
 # 集群显示名称
 displayName: hpc01
+# displayName:
+#   i18n:
+#     default: 集群1
+#     en: hpc01
+#     zh_cn: 集群1
+
 
 adapterUrl: "192.168.88.101:8972"
 
