--- a/dev/vagrant/config/clusterTexts.yaml
+++ b/dev/vagrant/config/clusterTexts.yaml
@@ -1,12 +1,43 @@
 # 给默认租户以及未登录用户的集群说明
 default:
     clusterComment: 集群说明
+    # clusterComment:
+    #   i18n:
+    #     default: 集群说明
+    #     en: Explanation of Cluster
+    #     zh_cn: 集群说明
     extras:
         - title: 其他内容1
           content: 其他内容1内容
         - title: 其他内容2
           content: 其他内容2内容
+    # extras:
+    #     - title:
+    #         i18n:
+    #           default: 其他内容1
+    #           en: Other Content One
+    #           zh_cn: 其他内容1
+    #       content:
+    #         i18n:
+    #           default: 其他内容1内容
+    #           en: Contents of Other Content One
+    #           zh_cn: 其他内容1内容
+    #     - title:
+    #         i18n:
+    #           default: 其他内容2
+    #           en: Other Content Two
+    #           zh_cn: 其他内容1
+    #       content:
+    #         i18n:
+    #           default: 其他内容2内容
+    #           en: Contents of Other Content Two
+    #           zh_cn: 其他内容2内容
 
 # tenant_1租户的用户的说明
 tenant_1:
     clusterComment: tenant_1的内容
+    # clusterComment:
+    #   i18n:
+    #     default: tenant_1的内容
+    #     en: Contents of tenant_1
+    #     zh_cn: tenant_1的内容
