--- a/dev/vagrant/config/clusters/hpc01.yaml
+++ b/dev/vagrant/config/clusters/hpc01.yaml
@@ -12,6 +12,11 @@ adapterUrl: "192.168.88.101:8972"
 loginNodes:
   # 登录节点展示名称
   - name: login
+  # - name:
+  #   i18n:
+  #     default: 登录节点
+  #     en: login
+  #     zh_cn: 登录节点
     # 登录节点的IP或者域名
     # 如果设置的是域名，请确认此节点的/etc/hosts中包含了域名到IP的解析信息
     address: 192.168.88.102
