add the config of crossClusterFilesTransfer in mis-server

--- a/apps/mis-server/config/clusters/hpc02.yml
+++ b/apps/mis-server/config/clusters/hpc02.yml
@@ -3,6 +3,8 @@ adapterUrl: localhost:6002
 loginNodes:
   - name: login
     address: localhost:22222
+crossClusterFilesTransfer:
+  enabled: false
 # slurm:
 #   loginNodes:
 #     - localhost:22222
