--- a/apps/mis-server/config/clusters/hpc00.yml
+++ b/apps/mis-server/config/clusters/hpc00.yml
@@ -3,7 +3,8 @@ adapterUrl: localhost:6000
 loginNodes:
   - name: login
     address: localhost:22222
-
+crossClusterFilesTransfer:
+  enabled: false
 #   partitions:
 #     - name: C032M0128G
 #       mem: 131072
