修改门户集群查找name时的错误，恢复配置文件配置

--- a/dev/vagrant/config/auth.yml
+++ b/dev/vagrant/config/auth.yml
@@ -1,167 +1,33 @@
 # 指定使用认证类型为LDAP
 authType: ldap
 
-# redisUrl: 192.168.88.100:6379
-redisUrl: 172.16.20.123:6379
+redisUrl: 192.168.88.100:6379
 
 allowedCallbackHostnames:
   - localhost
-
-captcha:
-  enabled: false
-
-# ldap认证支持绑定和验证otp，ssh认证仅支持验证
-otp:
-  # 是否启用otp功能， 默认false
-  enabled: false
-  # status指定otp启用类型，分别为ldap：密钥存在ldap，remote：密钥您自己管理。
-  type: ldap
-  # 当status为ldap时间，需配置以下这段内容来本地注册
-  ldap:
-    # 限制绑定otp要在多少分钟内完成，需要整数,默认10分钟
-    timeLimitMinutes: 10
-    # 密钥存储属性名,需要用户自己定义, 这里使用title存储仅便于测试
-    secretAttributeName: title
-    # 访问scow系统的域名或ip(不需要填写scow的base path)
-    scowHost: http://localhost:5000
-    # otp验证软件扫描二维码之后，出现的label中，用户名和@后显示的名称, 默认为SCOW
-    label: "scow"
-    # otp的二维码上方文字描述信息", 默认为 "此二维码仅出现一次，用过即毁", 支持html标签
-    qrcodeDescription: "此二维码仅出现一次"
-    # 绑定otp时发送绑定信息方式
-    authenticationMethod:
-      mail:
-        # 发件邮箱地址
-        from: "morgan68@ethereal.email"
-        # 发送邮件频率限制，需要整数，单位秒，默认60秒间隔
-        sendEmailFrequencyLimitInSeconds: 20
-        # 邮件主题，默认为"otp绑定链接"
-        subject: "otp绑定链接"
-        # 邮件内容标题，默认为"Bind OTP", 也可以是html标签
-        title: "Bind OTP"
-        # 邮件内容,默认为"Please click on the following link to bind your OTP:"，也可以是html标签
-        contentText: "Please click on the following link to bind your OTP"
-        # 标签点击文字,默认为"Bind OTP"
-        labelText: "Bind OTP"
-        mailTransportInfo:
-          # SMTP服务器
-          host: "smtp.ethereal.email"
-          # 是否启用安全连接，默认false
-          secure: false
-          # 服务器端口
-          port: 587
-          # SMTP身份验证用户名
-          user: "morgan68@ethereal.email"
-          # SMTP身份验证授权码
-          password: "y2es3bd3rYwxWs5n8g"
-  # 如果mode指定为remote，需要配置以下内容
-  remote:
-    # 远程验证url,详见https://pkuhpc.github.io/SCOW/docs/
-    validateUrl: http://localhost:9999/otp/remote/validateCode
-    # 登录界面绑定otp按钮跳转的链接, 建议配置，不配置会不显示绑定otp按钮
-    redirectUrl: https://pkuhpc.github.io/SCOW/docs/deploy/config/auth/config
-
+	@@ -63,7 +64,8 @@ otp:
 # 在此部分输入LDAP的配置
 ldap:
   # LDAP服务器地址。必填
-  # url: ldap://192.168.88.101
-  url: ldap://172.16.20.123
+  url: ldap://192.168.88.101
 
   # 进行LDAP操作的用户DN。默认为空
   bindDN: cn=Manager,ou=hpc,o=pku
-  # 进行LDAP操作的用户密码。默认为空
-  bindPassword: "admin"
-
-  # 在哪个节点下搜索要登录的用户。必填
-  searchBase: "ou=hpc,o=pku"
-  # 搜索登录用户时的筛选器。必填
-  userFilter: "(uid=*)"
-
-  # 属性映射
-  attrs:
-    # LDAP中对应用户ID的属性名
-    uid: uid
-
-    # LDAP对应用户姓名的属性名
-    # 此字段用于
-    # 1. 登录时显示为用户的姓名
-    # 2. 创建用户的时候把姓名信息填入LDAP
-    # 3. 管理系统添加用户时，验证ID和姓名是否匹配
-    #
-    # 如果不设置此字段，那么
-    # 1. 用户姓名为用户的ID
-    # 2. 创建用户时姓名信息填入LDAP
-    # 3. 管理系统添加用户时，不验证ID与姓名是否匹配
-    name: cn
-
-    # LDAP中对应用户的邮箱的属性名。可不填。此字段只用于在创建用户的时候把邮件信息填入LDAP。
-    mail: mail
-
-  # 添加用户的相关配置。必填
-  addUser:
-    # 增加用户节点时，把用户增加到哪个节点下
-    userBase: "ou=People,ou=hpc,o=pku"
-
-    # 用户的homeDirectory值。使用{{ userId }}代替新用户的用户名。默认如下
-    homeDir: /data/home/{{ userId }}
-
-    # LDAP增加用户时，新用户节点的DN中，第一个路径的属性的key。
-    # 新用户节点的DN为{userIdDnKey}={用户ID},{userBase}
-    # 如果不填写，则使用ldap.attrs.uid的值
-    userIdDnKey: uid
-
-    # 如何确定新用户的组。可取的值包括：
-    # newGroupPerUser: 给每个用户创建新的组
-    # oneGroupForAllUsers: 不创建新的组，给所有用户设定一个固定的组
-    groupStrategy: newGroupPerUser
-
-    newGroupPerUser:
-      # 用户对应的新组应该加在哪个节点下
-      groupBase: "ou=Group,ou=hpc,o=pku"
-
-      # 新的组节点的DN中，第一个路径的属性的key。
-      # 新的组节点的DN为{groupIdDnKey}={用户ID},{groupBase}
-      # 如果不填写，则使用ldap.attrs.uid的值
-      groupIdDnKey: cn
-
-      # 组的节点应该额外拥有的属性值。可以使用 {{ 用户节点的属性key }}来使用用户节点的属性值
-      # extraProps:
-      #   greetings: hello this is group {{ userId }}
-
-    # 如果groupStrategy设置为oneGroupForAllUsers，那么必须设置此属性
-    oneGroupForAllUsers:
-      # 用户的gidNumber属性的值
-      gidNumber: 5000
-
-    # 是否应该把新用户加到哪个LDAP组下。如果不填，则不加
-    # addUserToLdapGroup: group
-
-    # uid从多少开始。生成的用户的uid等于此值加上用户账户中创建的用户ID
-    # 默认如下
-    # uidStart: 66000
-
-    # 用户项除了id、name和mail，还应该添加哪些属性。类型是个dict
-    # 如果这里出现了名为uid, name或email的属性，这里的值将替代用户输入的值。
-    # 属性值支持使用 {{ LDAP属性值key }} 格式来使用用户填入的值。
-    # 例如：sn: "{{ cn }}"，那么添加时将会增加一个sn属性，其值为cn的属性，即为用户输入的姓名
-    # extraProps:
-    #   key: value
-
-# auth 界面 ui 配置
-ui:
-  # 登录界面背景图
-  backgroundImagePath: "./assets/background.png"
-  # 登录界面背景色，当背景图无法加载时，背景色起效
-  backgroundFallbackColor: "#9a0000"
+	@@ -154,58 +156,16 @@ ui:
   # 登录界面 logo 图, light: 亮色模式下的 logo, dark: 黑暗模式下的 logo
   logoType: "dark"
 
-  # 登录界面 slogan 配置
   slogan:
     # 登录界面 slogan 文字颜色
     color: "white"
     # 登录界面 slogan title
     title: "开源算力中心门户和管理平台"
+    # title:
+    #   i18n:
+    #     default: "开源算力中心门户和管理平台"
+    #     en: "Open-source Compute Center Portal and Management Platform"
+    #     zh_cn: "开源算力中心门户和管理平台"
+
     # 多条 slogan 文本
     texts:
       - "图形化界面，使用方便"
@@ -169,3 +35,40 @@ ui:
       - "一体化部署，开箱即用"
       - "标准化平台，支持算力融合"
       - "开源中立，独立自主"
+  #   texts:
+  #     - i18n:
+  #         default: "图形化界面，使用方便"
+  #         en: "Graphical user interface, user-friendly"
+  #         zh_cn: "图形化界面，使用方便"
+  #     - i18n:
+  #         default: "功能丰富，管理简单"
+  #         en: "Feature-rich, easy management"
+  #         zh_cn: "功能丰富，管理简单"
+  #     - i18n:
+  #         default: "一体化部署，开箱即用"
+  #         en: "Integrated deployment, ready to use out of the box"
+  #         zh_cn: "一体化部署，开箱即用"
+  #     - i18n:
+  #         default: "标准化平台，支持算力融合"
+  #         en: "Standardized platform, supporting compute integration"
+  #         zh_cn: "标准化平台，支持算力融合"
+  #     - i18n:
+  #         default: "开源中立，独立自主"
+  #         en: "Open-source neutrality, independent and autonomous"
+  #         zh_cn: "开源中立，独立自主"
+  #     - i18n:
+  #         default: "体验账号/密码如下，欢迎试用体验SCOW各项功能"
+  #         en: "Trial account details are as follows; you are welcome to try and experience the functionalities of SCOW."
+  #         zh_cn: "体验账号/密码如下，欢迎试用体验SCOW各项功能"
+  #     - i18n:
+  #         default: "管理员：demo_admin / demo_admin"
+  #         en: "Administrator: demo_admin / demo_admin"
+  #         zh_cn: "管理员：demo_admin / demo_admin"
+  #     - i18n:
+  #         default: "普通用户：demo_user / demo_user"
+  #         en: "Regular User: demo_user / demo_user"
+  #         zh_cn: "普通用户：demo_user / demo_user"
+
+
+  # 登陆界面底部 Power By 字体颜色配置
+  footerTextColor: "white"
