--- a/dev/vagrant/config/mis.yaml
+++ b/dev/vagrant/config/mis.yaml
@@ -1,10 +1,8 @@
 # 管理系统数据库的信息。可以不修改
 db:
-  # host: 192.168.88.100
-  host: 172.16.20.123
+  host: 192.168.88.100
   password: must!chang3this
-  # port: 3308
-  port: 3306
+  port: 3308
   user: root
   dbName: scow
 
@@ -38,6 +36,11 @@ createUser:
     regex: "^[a-zA-Z0-9_]+$"
     # 出错时的消息
     errorMessage: "只能由字母、下划线、数字组成"
+    # errorMessage:
+    #   i18n:
+    #     default: "只能由字母、下划线、数字组成"
+    #     en: "Must consist of characters, including numbers, letters, and underscores."
+    #     zh_cn: "只能由字母、下划线、数字组成"
 
 # # 新增导航链接相关配置
 # navLinks:
