--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -171,7 +171,7 @@ jobs:
           file: docker/Dockerfile.${{ matrix.file }}
           labels: ${{ steps.meta.outputs.labels }}
           # only build arm64 in master commits
-          platforms: linux/amd64${{ github.ref_type == 'tag' && ',linux/arm64' || '' }}
+          platforms: linux/amd64${{ true && ',linux/arm64' || '' }}
 
 
   release:
