修改测试集群loginNodes地址不重复

--- a/apps/mis-server/config/clusters/hpc01.yml
+++ b/apps/mis-server/config/clusters/hpc01.yml
@@ -2,7 +2,7 @@ displayName: hpc01
 adapterUrl: localhost:6001
 loginNodes:
   - name: login
-    address: localhost:22222
+    address: login01
 # misIgnore: true
 # slurm:
 #   mis:
