--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
   pull_request:
     branches: [master]
+    types: [opened]
+  issue_comment:
+    types: [created]
   push:
     tags:
       - "v**"
