--- a/apps/cli/assets/config/common.yml
+++ b/apps/cli/assets/config/common.yml
@@ -4,4 +4,5 @@ passwordPattern:
   regex: ^(?=.*\d)(?=.*[a-zA-Z])(?=.*[`~!@#\$%^&*()_+\-[\];',./{}|:"<>?]).{8,}$
 
   # 出错时的消息。下面为默认值
+  # 此文本支持国际化
   errorMessage: 必须包含字母、数字和符号，长度大于等于8位
