--- a/apps/cli/assets/config/portal.yaml
+++ b/apps/cli/assets/config/portal.yaml
@@ -21,6 +21,7 @@ apps: true
 # 主页标题
 homeTitle:
   # 默认文本
+  # 此文本支持国际化
   defaultText: "Super Computing on Web"
   # 从不同域名访问，显示的不同的文本
   # hostnameMap:
@@ -29,10 +30,15 @@ homeTitle:
 # 主页文本
 homeText:
   # 默认文本
+  # 此文本支持国际化
   defaultText: "SCOW"
   # 从不同域名访问，显示的不同的文本
   # hostnameMap:
   #   a.com: "a.com's SCOW"
+
+# 提交作业命令框中的提示语，可选配置
+# 此文本支持国际化
+# submitJobPromptText: "#此处参数设置的优先级高于页面其它地方，两者冲突时以此处为准"
 
 # 是否启用终端功能
 shell: true
