--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -71,7 +71,7 @@
     "ws": "8.13.0",
     "xterm": "5.2.1",
     "xterm-addon-fit": "0.7.0",
-    "react-typed-i18n": "^2.3.0"
+    "react-typed-i18n": "2.3.0"
   },
   "devDependencies": {
     "@ddadaal/next-typed-api-routes-cli": "0.9.1",
