--- a/apps/cli/assets/config/auth.yml
+++ b/apps/cli/assets/config/auth.yml
@@ -112,3 +112,23 @@ authType: ssh
 # allowedCallbackHostnames:
 #   - localhost
 #   - another.com
+
+  # # 登录界面 slogan 配置
+  # # 可选配置，默认右侧无 slogan
+  # slogan:
+  #   # 登录界面 slogan 文字颜色
+  #   # 可选配置，默认为白色字体
+  #   color: "white"
+  #   # 登录界面 slogan title
+  #   # 可选配置，默认无 slogan 标题
+  #   # 此文本支持国际化
+  #   title: "开源算力中心门户和管理平台"
+  #   # 多条 slogan 文本
+  #   # 可选配置，默认 slogan 为空数组
+  #   # 此文本支持国际化
+  #   texts:
+  #     - "图形化界面，使用方便"
+  #     - "功能丰富，管理简单"
+  #     - "一体化部署，开箱即用"
+  #     - "标准化平台，支持算力融合"
+  #     - "开源中立，独立自主"
