--- a/apps/cli/assets/config/clusters/hpc01.yaml
+++ b/apps/cli/assets/config/clusters/hpc01.yaml
@@ -1,9 +1,11 @@
 # 集群显示名称
+# 此文本支持国际化
 displayName: hpc01Name
 
 # 指定slurm配置
 loginNodes:
   # 登录节点展示名称
+  # 此文本支持国际化
   - name: login01
     # 登录节点的IP或者域名
     # 如果设置的是域名，请确认此节点的/etc/hosts中包含了域名到IP的解析信息
