--- a/apps/cli/assets/config/apps/app1.yaml
+++ b/apps/cli/assets/config/apps/app1.yaml
@@ -46,3 +46,7 @@ web:
 #     required: false
 #     # 此文本支持国际化
 #     placeholder: "比如：--gpus gres:2 --time 10"
+
+# 交互式应用说明，选填。
+# 此文本支持国际化
+# appComment: "对上方交互式应用进行说明<pre style='width: 40%'><code># 利用代码块说明</code></pre>"
