feat(portal): 交互式应用增加说明文字功能 (#886)
### 做了什么

在`{app}.yaml`中增加`appComment`, 允许管理员配置交互式应用说明文字，支持`HTML标签`，展示在创建应用页面下方
实现效果如下

![image](https://github.com/PKUHPC/SCOW/assets/43978285/341f4266-664c-4a9f-b08a-b84698db993e)

--- a/dev/vagrant/config/apps/emacs.yaml
+++ b/dev/vagrant/config/apps/emacs.yaml
@@ -21,3 +21,20 @@ vnc:
   # 此X Session的xstartup脚本
   xstartup: |
     emacs -mm
+
+
+# 交互式应用说明，选填。
+# 类型为string或国际化文本类型
+# appComment: "对上方交互式应用进行说明<pre style='width: 40%'><code># 利用代码块说明</code></pre>"
+# 国际化类型
+# appComment:
+#   i18n:
+#     default: |
+#       <p>对上方交互式应用进行说明</p>
+#       <pre style='width: 40%;'><code># 利用代码块说明</code></pre>
+#     en: |
+#       <p>Explanation of the app above</p>
+#       <pre style='width: 40%;'><code># explanation with code</code></pre>
+#     zh_cn: |
+#       <p>对上方交互式应用进行说明</p>
+#       <pre style='width: 40%;'><code># 利用代码块说明</code></pre>
