--- a/apps/mis-server/package.json
+++ b/apps/mis-server/package.json
@@ -8,7 +8,7 @@
     "dev": "dotenv -e env/.env.dev -- node --watch -r ts-node/register -r tsconfig-paths/register src/index.ts",
     "build": "rimraf build && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "serve": "node build/index.js",
-    "test": "jest",
+    "test": "jest --forceExit",
     "orm": "dotenv -e env/.env.dev -- npx mikro-orm"
   },
   "files": [
@@ -44,6 +44,7 @@
     "@scow/lib-scheduler-adapter": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.31.1",
+    "dayjs": "1.11.9",
     "dotenv": "16.3.1",
     "node-cron": "3.0.2",
     "pino": "8.15.0",
