feat(portal): 实现跨集群传输模块 (#872)
# 跨集群传输功能

这个PR主要实现了跨集群文件传输功能，包括传输进度的实时展示和取消传输。

## 前提准备


这个功能是一个可选功能，如果用户要使用这个功能，需要在部署时进行如下配置，请查看文档[跨集群传输功能](https://github.com/PKUHPC/SCOW/blob/ef3716cef6ca4025eb56ea0ddc9040dd64681681/docs/docs/deploy/config/portal/transfer-cross-clusters.md)

## 操作方式

### 文件传输

1) 点击文件传输，进入文件传输页面；

2) 勾选两侧的集群；

3) 点击选择需要传输的文件或文件夹，可以同目录多选；

4) 点击中间箭头按钮，进行传输；


![image-20230922160628](https://github.com/PKUHPC/SCOW/assets/78996942/e1ec1d07-4710-4311-bef7-2e6a025fd49c)


![image-20230922160652](https://github.com/PKUHPC/SCOW/assets/78996942/9c6791be-895d-4fd6-8466-5c58ad4789cf)

### 传输进度和取消传输

点击传输进度查询，可查看当前传输文件的进度；

点击取消可以取消对某个文件传输。


![image-20230922160749](https://github.com/PKUHPC/SCOW/assets/78996942/9060d918-9960-4de8-ac54-368b7d0a7826)

--- a/apps/mis-server/config/clusters/hpc01.yml
+++ b/apps/mis-server/config/clusters/hpc01.yml
@@ -3,6 +3,9 @@ adapterUrl: localhost:6001
 loginNodes:
   - name: login
     address: login01
+crossClusterFileTransfer:
+  enabled: true
+  transferNode: localhost:22222
 # misIgnore: true
 # slurm:
 #   mis:
