--- a/apps/mis-server/config/clusters/hpc02.yml
+++ b/apps/mis-server/config/clusters/hpc02.yml
@@ -3,6 +3,8 @@ adapterUrl: localhost:6002
 loginNodes:
   - name: login
     address: login02
+crossClusterFileTransfer:
+  enabled: false
 # slurm:
 #   loginNodes:
 #     - localhost:22222
