--- a/apps/portal-server/config/clusters/hpc01.yaml
+++ b/apps/portal-server/config/clusters/hpc01.yaml
@@ -3,6 +3,9 @@ adapterUrl: 0.0.0.0:6000
 loginNodes:
   - name: login
     address: localhost:22222
+crossClusterFileTransfer:
+  enabled: true
+  transferNode: localhost:22222
 # slurm:
 #   partitions:
 #       - name: compute
