--- a/apps/portal-web/config/clusters/hpc01.yaml
+++ b/apps/portal-web/config/clusters/hpc01.yaml
@@ -3,6 +3,9 @@ adapterUrl: 0.0.0.0:6000
 loginNodes:
   - name: loginNode01
     address: localhost:22222
+crossClusterFileTransfer:
+  enabled: true
+  transferNode: localhost:22222
 # slurm:
 #   loginNodes:
 #     - localhost:22222
