--- a/apps/portal-web/config/clusters/hpc02.yaml
+++ b/apps/portal-web/config/clusters/hpc02.yaml
@@ -3,6 +3,9 @@ adapterUrl: 0.0.0.0:6000
 loginNodes:
   - name: loginNode02
     address: localhost:22
+crossClusterFileTransfer:
+  enabled: true
+  transferNode: localhost:222
 # slurm:
 #   loginNodes:
 #     - localhost:22
