--- a/apps/audit-server/package.json
+++ b/apps/audit-server/package.json
@@ -33,6 +33,7 @@
     "@scow/config": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
+    "@scow/lib-operation-log": "workspace:*",
     "@scow/utils": "workspace:*",
     "@scow/protos": "workspace:*",
     "pino": "8.15.0",
