--- a/apps/portal-web/.eslintrc.json
+++ b/apps/portal-web/.eslintrc.json
@@ -2,5 +2,6 @@
   "extends": [
     "@ddadaal/eslint-config/react",
     "../../.eslintrc.js"
-  ]
+  ],
+  "ignorePatterns": ["public/monaco-assets/**"]
 }
