--- a/dev/vagrant/config/portal.yaml
+++ b/dev/vagrant/config/portal.yaml
@@ -60,6 +60,10 @@ homeText:
 # 是否启用终端功能
 shell: true
 
+# 文件编辑大小限制
+# 可接受的格式为nginx的client_max_body_size可接受的值
+# fileEditSize: "1m"
+
 # 提交作业的默认工作目录。使用{{ name }}代替作业名称。相对于用户的家目录
 # submitJobDefaultPwd: scow/jobs/{{ name }}
 
