--- a/apps/mis-server/package.json
+++ b/apps/mis-server/package.json
@@ -44,6 +44,7 @@
     "@scow/lib-scheduler-adapter": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.31.1",
+    "ioredis": "5.3.2",
     "dayjs": "1.11.9",
     "dotenv": "16.3.1",
     "node-cron": "3.0.2",
