--- a/apps/cli/assets/config/mis.yaml
+++ b/apps/cli/assets/config/mis.yaml
@@ -15,6 +15,13 @@ fetchJobs:
     # 周期的cron表达式
     cron: "10 */10 * * * *"
 
+# 周期性同步scow与调度器(如slurm)账户用户封锁状态的配置
+periodicSyncUserAccountBlockStatus:
+  # 是否开启
+  enabled: true
+  # 周期的cron表达式
+  cron: "0 4 * * *"
+
 # 预定义的充值类型
 predefinedChargingTypes:
   - 测试
