增加对新增账户、用户、租户、充值的输入框的限制

--- a/apps/cli/assets/config/mis.yaml
+++ b/apps/cli/assets/config/mis.yaml
@@ -27,34 +27,34 @@ predefinedChargingTypes:
   - 测试
 
 # 创建账户时，账户名的规则。不设置就没有限制
-# accountNamePattern:
+accountNamePattern:
   # 正则表达式
-  # regex: ""
+  regex: "^a_[a-z0-9]{0,18}$"
 
-  # 出错时的消息
+  # 出错时的消息，对应上面的正则表达式
   # 此文本支持国际化
-  # errorMessage: ""
+  errorMessage: "要求输入以a_开头，长度最长为20个字符，后面只能接小写字母或数字的字符串"
 
 # 创建用户相关配置
-# createUser:
+createUser:
 
   # 是否允许用户从SCOW中创建用户
-  # enabled: true
+  enabled: true
 
   # SCOW中创建用户界面是使用内置的（builtin）或者使用外置页面（external）
   # 默认builtin
-  # type: builtin
+  type: builtin
 
   # 内置创建用户界面配置
-  # builtin:
+  builtin:
     # 用户ID的格式
-    # userIdPattern:
+    userIdPattern:
       # 正则表达式
-      # regex: ""
+      regex: "^[a-z][a-z0-9_]{2,19}$"
 
       # 出错时的消息
       # 此文本支持国际化
-      # errorMessage: ""
+      errorMessage: "要求输入长度为3-20位，由小写字母、数字、下划线组成，且以小写字母开头的字符串"
 
   # 外置页面配置
   # external:
